
syntax = "proto3";
option go_package = ".;proto";

import "google/api/annotations.proto";
import "common.proto";

service Keystore {
    /**
      Method: GenValidatorKey
      Input: message GenValidatorKeys
      Response: message KeyPairs
      Description: Returns private keys generated for validators start.
    */
    rpc GenValidatorKey(GenValidatorKeys) returns (KeyPairs) {
      option (google.api.http) = {
        post: "/utils/genvalidatorkey"
        body: "*"
      };
    }

}

message GenValidatorKeys {
  uint64 keys = 1;
}

